; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_util.c_sati_scsi_block_descriptor_construct.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_util.c_sati_scsi_block_descriptor_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCSI_BLOCK_DESCRIPTOR_TYPE = common dso_local global i32 0, align 4
@SCSI_BLOCK_DESCRIPTOR_ADDITIONAL_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @sati_scsi_block_descriptor_construct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sati_scsi_block_descriptor_construct(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 1, i32* %5, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @SCSI_BLOCK_DESCRIPTOR_TYPE, align 4
  %9 = call i32 @sati_set_sense_data_byte(i32* %6, i32 %7, i32 0, i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @SCSI_BLOCK_DESCRIPTOR_ADDITIONAL_LENGTH, align 4
  %13 = call i32 @sati_set_sense_data_byte(i32* %10, i32 %11, i32 1, i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @sati_set_sense_data_byte(i32* %14, i32 %15, i32 2, i32 0)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %5, align 4
  %20 = shl i32 %19, 5
  %21 = call i32 @sati_set_sense_data_byte(i32* %17, i32 %18, i32 3, i32 %20)
  ret void
}

declare dso_local i32 @sati_set_sense_data_byte(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
